# LibraryProject

./: .gitignore  CMakeLists.txt  README.md  books.csv  items.csv  renters.csv  rents.csv
include/: Book.h  BorrowedItem.h  DataBase.h  GUIHandler.h  Item.h  Movie.h  Other.h  Rent.h  Renter.h  RentingManager.h  Staff.h  Student.h  TimeManager.h
src/: Book.cpp  BorrowedItem.cpp  DataBase.cpp  GUIHandler.cpp  Item.cpp  Movie.cpp  Other.cpp  Rent.cpp  Renter.cpp  RentingManager.cpp  RentingManger.cpp  Staff.cpp  Student.cpp  TimeManager.cpp  main.cpp
test/: LibraryTest.cpp
